// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - closed 1`] = `<div />`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - input token invalid 1`] = `
<div>
  <div
    class="prc-Popover-Popover-7QIH8"
    data-caret="top-left"
    data-component="Popover"
    data-open=""
  >
    <div
      class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
      data-component="Popover.Content"
      data-height="auto"
      data-width="auto"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="stretch"
        data-component="Stack"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div>
          <span
            class="text-xs opacity-90 prc-Text-Text-9mHv3"
            data-component="Text"
          >
            Please use one of the supported filters [
            org, repo
            ]
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - input token valid 1`] = `
<div>
  <div
    class="prc-Popover-Popover-7QIH8"
    data-caret="top-left"
    data-component="Popover"
    data-open=""
  >
    <div
      class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
      data-component="Popover.Content"
      data-height="auto"
      data-width="auto"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="stretch"
        data-component="Stack"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div>
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-component="Stack"
            data-direction="vertical"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <span
              class="text-xs font-semibold prc-Text-Text-9mHv3"
              data-component="Text"
            >
              repo:
            </span>
            <span
              class="text-xs opacity-90 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              filter by repository full name
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - open with detailed notifications enabled 1`] = `
<div>
  <div
    class="prc-Popover-Popover-7QIH8"
    data-caret="top-left"
    data-component="Popover"
    data-open=""
  >
    <div
      class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
      data-component="Popover.Content"
      data-height="auto"
      data-width="auto"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="stretch"
        data-component="Stack"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div>
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-component="Stack"
            data-direction="vertical"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <span
              class="text-xs font-semibold prc-Text-Text-9mHv3"
              data-component="Text"
            >
              author:
            </span>
            <span
              class="text-xs opacity-90 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              filter by thread author
            </span>
          </div>
        </div>
        <div>
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-component="Stack"
            data-direction="vertical"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <span
              class="text-xs font-semibold prc-Text-Text-9mHv3"
              data-component="Text"
            >
              commenter:
            </span>
            <span
              class="text-xs opacity-90 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              filter by latest comment author
            </span>
          </div>
        </div>
        <div>
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-component="Stack"
            data-direction="vertical"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <span
              class="text-xs font-semibold prc-Text-Text-9mHv3"
              data-component="Text"
            >
              org:
            </span>
            <span
              class="text-xs opacity-90 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              filter by organization owner
            </span>
          </div>
        </div>
        <div>
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-component="Stack"
            data-direction="vertical"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <span
              class="text-xs font-semibold prc-Text-Text-9mHv3"
              data-component="Text"
            >
              repo:
            </span>
            <span
              class="text-xs opacity-90 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              filter by repository full name
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/filters/SearchFilterSuggestions.tsx > should render itself & its children - open without detailed notifications enabled 1`] = `
<div>
  <div
    class="prc-Popover-Popover-7QIH8"
    data-caret="top-left"
    data-component="Popover"
    data-open=""
  >
    <div
      class="p-2 mt-2 prc-Popover-PopoverContent-2x-Aj"
      data-component="Popover.Content"
      data-height="auto"
      data-width="auto"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="stretch"
        data-component="Stack"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div>
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-component="Stack"
            data-direction="vertical"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <span
              class="text-xs font-semibold prc-Text-Text-9mHv3"
              data-component="Text"
            >
              org:
            </span>
            <span
              class="text-xs opacity-90 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              filter by organization owner
            </span>
          </div>
        </div>
        <div>
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="stretch"
            data-component="Stack"
            data-direction="vertical"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <span
              class="text-xs font-semibold prc-Text-Text-9mHv3"
              data-component="Text"
            >
              repo:
            </span>
            <span
              class="text-xs opacity-90 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              filter by repository full name
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
